--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "wire": "0.9.1"
 	},
 	"devDependencies": {
-	
+	     "nodeunit": "0.7.4"
 	},
 	"license": "MIT",
 	"readmeFilename": "README.md"
