--- a/yaap/package.json
+++ b/yaap/package.json
@@ -1,28 +1,36 @@
 {
-	"name": "yaap",
-	"version": "0.1.2",
-	"description": "yaap",
-	"keywords": [ "javascript", "dependency injection", "AOP", "IOC"],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/warmuuh/yaap.git"
-	},
-	"bugs": {
-		"url": "https://github.com/warmuuh/yaap/issues"
-	},
-	"contributors": [
-		"Peter Mucha <ptmucha@gmail.com>"
-	],
-	"dependencies": {
-		"PanPG": "0.0.9",
-        "underscore": "1.4.4",
-        "when": "2.2.1",
-        "wire": "0.10.0"
-	},
-	"devDependencies": {
-	     "nodeunit": "0.7.4"
-	},
-	"license": "MIT",
-	"readmeFilename": "README.md",
-  "main":"./yaap"
-} 
+  "name": "yaap",
+  "version": "0.1.2",
+  "description": "yaap",
+  "keywords": [
+    "javascript",
+    "dependency injection",
+    "AOP",
+    "IOC"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/warmuuh/yaap.git"
+  },
+  "bugs": {
+    "url": "https://github.com/warmuuh/yaap/issues"
+  },
+  "scripts": {
+    "test": "node testsuite.js"
+  },
+  "contributors": [
+    "Peter Mucha <ptmucha@gmail.com>"
+  ],
+  "dependencies": {
+    "PanPG": "0.0.9",
+    "underscore": "1.4.4",
+    "when": "2.2.1",
+    "wire": "0.10.0"
+  },
+  "devDependencies": {
+    "nodeunit": "~0.9.0"
+  },
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "main": "./yaap"
+}
